--- a/frontend/scripts/makefile/flutter.toml
+++ b/frontend/scripts/makefile/flutter.toml
@@ -185,26 +185,15 @@ script_runner = "@duckscript"
 [tasks.code_generation]
 script_runner = "@shell"
 script = [
-  """
-  cd appflowy_flutter
-  flutter clean
-  flutter packages pub get
-  dart run easy_localization:generate -S assets/translations/ -f keys -o locale_keys.g.dart -S assets/translations -s en.json
-  dart run build_runner build -d
-  """,
+  "../code_generation/generate.sh"
 ]
 
 [tasks.code_generation.windows]
 script_runner = "@duckscript"
 script = [
-  """
-  cd ./appflowy_flutter/
-  exec cmd.exe /c flutter clean
-  exec cmd.exe /c flutter packages pub get
-  exec cmd.exe /c dart run easy_localization:generate -S assets/translations/ -f keys -o locale_keys.g.dart -S assets/translations -s en.json
-  exec cmd.exe /c dart run build_runner build -d
-  """,
+  "../code_generation/generate.cmd"
 ]
+
 
 [tasks.dry_code_generation]
 script_runner = "@shell"
