fix: fs is not valid duckscript cmd

--- a/frontend/scripts/makefile/flutter.toml
+++ b/frontend/scripts/makefile/flutter.toml
@@ -195,7 +195,7 @@ script = [
 script_runner = "@duckscript"
 script = [
   """
-  fs chmod --file="scripts/code_generation/generate.cmd" --mode=755
+  chmod --file="scripts/code_generation/generate.cmd" --mode=755
   """,
   "scripts/code_generation/generate.cmd"
 ]
