--- a/frontend/scripts/makefile/flutter.toml
+++ b/frontend/scripts/makefile/flutter.toml
@@ -195,7 +195,7 @@ script = [
 script_runner = "@duckscript"
 script = [
   """
-  chmod --file="scripts/code_generation/generate.cmd" --mode=755
+  exec cmd.exe chmod +x scripts/code_generation/generate.cmd
   """,
   "scripts/code_generation/generate.cmd"
 ]
