fix: dependency hell

--- a/frontend/appflowy_flutter/packages/flowy_infra/pubspec.yaml
+++ b/frontend/appflowy_flutter/packages/flowy_infra/pubspec.yaml
@@ -10,6 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.2
+  path_provider: ^2.0.15
+  path: ^1.8.2
+  textstyle_extensions: "2.0.0-nullsafety"
   time: ">=2.0.0"
   uuid: ">=2.2.2"
   flutter_svg: ^2.0.6
@@ -18,9 +22,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
-  build_runner: ^2.3.3
-  json_annotation: ^4.8.1
-  json_serializable: ^6.6.2
+  build_runner: ^2.2.0
+  json_serializable: ^6.5.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
